fix scrolling issue on mobile for embedded google docs

--- a/react-portfolio/src/components/Resume.css
+++ b/react-portfolio/src/components/Resume.css
@@ -17,17 +17,19 @@
 
 @media (max-aspect-ratio: 4/3) {
   iframe {
-    width: 900px;
-    height: 1200px;
+    width: 100%;
+    height: 100%;
     border-style: solid;
     border-color: black;
     border-width: 5px;
     border-radius: 10px;
+    overflow-x: hidden;
   }
 
   .resumeContainer {
     margin: 10px;
     display: flex;
     justify-content: center;
+    height: 90vh;   
   }
 }
